Fixed an issue in IE where the legends in the global options menu were not showing up.

--- a/content/spider.css
+++ b/content/spider.css
@@ -260,6 +260,8 @@
 
 .global-options-section legend {
     font-size: 1em;
+    color: white;
+    display: block;
 }
 
 .global-options-section button {
